--- a/videotrimmer/src/main/AndroidManifest.xml
+++ b/videotrimmer/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="idv.luchafang.videotrimmer"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" />
